# rozbie

./: Cargo.toml  LICENSE  README.md  build.rs
RozbieFarm/: RozbieFarm.sln
RozbieFarm/RozbieFarm/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RozbieFarm.csproj
RozbieFarm/RozbieFarm/Model/: RozbieInfo.cs  RozbieTextResponse.cs
RozbieFarm/RozbieFarm/RozbieServer/: RozbieTask.cs  Server.cs
src/: backdoor.rs  func.c  helper.rs  main.rs
