[package]
name = "rozbie"
version = "0.1.0"
edition = "2021"
description = "The Rozbie malware."
keywords = ["server", "spying", "malware"]
authors = ["Rozen Software <rozsoft@wp.pl>"]
repository = "https://github.com/rozensoftware/rozbie"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28"
winreg = "0.11"

[build-dependencies]
cc = "1.0"